# all-in-one-llm-book

./: .gitignore  README.md  main.py  pyproject.toml
book_example/: chapter2.ipynb
book_example/artifacts/tokenizer/: tokenizer.json
book_example/artifacts/tokenizer/huggingface_tokenizer/: tokenizer.json
chapter2/: main.ipynb
chapter2/2/: main.ipynb
chapter2/content/: tokenizer.json
chapter3/3/: main.ipynb
chapter3/4/: 0_full_fine_tuning_config.yaml  1_train_full_fine_tuning.py  config__lora.yaml  train_lora.py
chapter5/2/: 1_vllm.ipynb
chapter5/4/: 1_multi-lora_notebook.ipynb
experiments/gemma3_kotext2sql/: cuda_ddp_check.py  train.py
