[project]
name = "all-in-one-llm-book"
version = "0.1.0"
description = "All in one LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "dotenv>=0.9.9",
    "huggingface-hub>=1.5.0",
    "ipykernel>=7.2.0",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
    "accelerate==1.3.0",
    "evaluate==0.4.3",
    "trl==0.13.0"
]
