[project]
name = "all-in-one-llm-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.3",
    "huggingface-hub>=1.5.0",
    "ipykernel>=7.2.0",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "trl>=0.29.1",
]

# 1. PyTorch 전용 저장소를 등록하고 '명시적(explicit)'으로만 사용하겠다고 선언합니다.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

# 2. 어떤 패키지를 PyTorch 저장소에서 가져올지 딱 정해줍니다.
[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[tool.uv]
index-strategy = "unsafe-best-match"
